--- a/NetBanking-System-in-PHP-master/loans.html
+++ b/NetBanking-System-in-PHP-master/loans.html
@@ -190,7 +190,8 @@
                             <!-- <h4><a href="service24x7.html">24 x 7 Service</a></h4> -->
                             <h4><a href="">Commercial Agricultural and Livestock Loan</a></h4>
                             <p>"Commercial Agricultural and Livestock Loan" is a subsidized loan Product to meet the financing requirement of businesses for various agricultural and livestock purposes as per the “Procedure for the Interest Subsidy on Subsidized
-                                Loan”.</p>
+                                Loan”.
+                            </p>
                         </div>
                     </div>
 
@@ -337,7 +338,7 @@
         <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
 
         <!-- Template Main JS File -->
-        <script src="assets/js/main.js"></script>
+        <!-- <script src="assets/js/main.js"></script> -->
 
 </body>
 
